--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,9 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+.idea/
+.DS_Store
+.vagrant/
+servers/princeton/keys/pu_pve_rsa
+servers/princeton/keys/pu_pve_vm_rsa
