--- a/proxmox/princeton/inventory.ini
+++ b/proxmox/princeton/inventory.ini
@@ -1,6 +1,3 @@
-;[webservers]
-;pve1-vm110 ansible_host=10.10.10.110
-
-;[webservers:vars]
-;ansible_user=mshahbaz
-;ansible_ssh_common_args=' -o ProxyCommand="ssh -F ./ssh_config pve1 -W %h:%p"'
+[all:vars]
+ansible_user=mshahbaz
+ansible_ssh_common_args=' -o ProxyCommand="ssh -F ./ssh_config pve1 -W %h:%p"'
