--- a/proxmox/princeton/roles/proxmox-provision/defaults/main.yml
+++ b/proxmox/princeton/roles/proxmox-provision/defaults/main.yml
@@ -1,17 +1,17 @@
 ---
 
-proxmox_provision_hosts: [ vm1, vm2, vm3, vm4, ]
 proxmox_node: mshahbaz-poweredge-1-pve
 proxmox_api_user: root@pam
 proxmox_api_password: PrincetonP4OVS
 proxmox_api_host: 128.112.168.26
 
-#proxmox_provision_memory: 512
-#proxmox_provision_password: lxctemplate123
-#proxmox_provision_storage: /var/lib/vz/template/cache
-#proxmox_provision_api_storage: "local:vztmpl"
-#proxmox_provision_template_file: "{{lxctemplate_file}}" #from ansible-template
-#proxmox_provision_bridge: vmbr0
-#proxmox_provision_netif: "{'net0':'name=eth0,ip=dhcp,ip6=dhcp,bridge={{proxmox_provision_bridge}}'}"
-
-proxmox_deploy: false
+proxmox_provision_clone_vmid: 101
+proxmox_provision_hostname_prefix: ubuntu-14
+proxmox_provision_ip_prefix: 10.10.10.
+proxmox_provision_interface: eth0
+proxmox_provision_netmask: 255.255.255.0
+proxmox_provision_network: "{{ proxmox_provision_ip_prefix }}0"
+proxmox_provision_broadcast: "{{ proxmox_provision_ip_prefix }}255"
+proxmox_provision_gateway: "{{ proxmox_provision_ip_prefix }}1"
+proxmox_provision_dns_nameservers: 128.112.136.10
+proxmox_provision_dns_search: cs.princeton.edu
