--- a/proxmox/princeton/inventory.ini
+++ b/proxmox/princeton/inventory.ini
@@ -1,6 +1,9 @@
 [pve1_servers]
+ubuntu-14-120 ansible_host=10.10.10.120
 
 [pve1_servers:vars]
 ansible_user=mshahbaz
 ansible_ssh_common_args=' -o ProxyCommand="ssh -F ./ssh_config pve1 -W %h:%p"'
 
+[pve1_data_servers]
+ubuntu-14-120 ansible_host=10.10.10.120
