--- a/proxmox/princeton/provision.yml
+++ b/proxmox/princeton/provision.yml
@@ -8,8 +8,8 @@
     proxmox_name: pve1
     proxmox_node: mshahbaz-poweredge-1-pve
     proxmox_api_host: 128.112.168.26
-    proxmox_provision_vmids: [ 120, ]
-    proxmox_provision: false
+    proxmox_provision_vmids: [ 120, 121, 122, 123 ]
+    proxmox_provision: true
 
   tasks:
     - include_role:
@@ -17,12 +17,3 @@
       vars:
         proxmox_provision_vmid: "{{ item }}"
       with_items: "{{ proxmox_provision_vmids }}"
-
-- hosts: servers
-  gather_facts: false
-  tasks:
-    - command: hostname
-      register: output
-
-    - debug:
-        msg: "{{ output.stdout }}"
