--- a/proxmox/princeton/roles/proxmox/tasks/main.yml
+++ b/proxmox/princeton/roles/proxmox/tasks/main.yml
@@ -1,154 +1,15 @@
 ---
 
-- name: Provision VM
-  block:
-  - name: Add VM:{{ proxmox_clone_vmid }}
-    add_host:
-      name: "{{ proxmox_ip_prefix }}{{ proxmox_clone_vmid }}"
-      instance_name: "{{ proxmox_name }}-server-{{ proxmox_clone_vmid }}"
-      groups: "{{ proxmox_name }}-servers"
-      ansible_user: "{{ proxmox_user }}"
-      ansible_ssh_common_args: ' -o ProxyCommand="ssh -F ./ssh_config {{ proxmox_name }} -W %h:%p"'
-
-  - name: Clone VM:{{ proxmox_vmid }}
-    proxmox_kvm:
-      state: present
-      node: "{{ proxmox_node }}"
-      api_user: "{{ proxmox_api_user }}"
-      api_password: "{{ proxmox_api_password }}"
-      api_host: "{{ proxmox_api_host }}"
-      clone: "{{ proxmox_hostname_prefix }}-{{ proxmox_clone_vmid }}"
-      vmid: "{{ proxmox_clone_vmid }}"
-      name: "{{ proxmox_hostname_prefix }}-{{ proxmox_vmid }}"
-      newid: "{{ proxmox_vmid }}"
-    delegate_to: localhost
-
-  - name: Start VM:{{ proxmox_vmid }}
-    proxmox_kvm:
-      state: started
-      node: "{{ proxmox_node }}"
-      api_user: "{{ proxmox_api_user }}"
-      api_password: "{{ proxmox_api_password }}"
-      api_host: "{{ proxmox_api_host }}"
-      name: "{{ proxmox_hostname_prefix }}-{{ proxmox_vmid }}"
-      vmid: "{{ proxmox_vmid }}"
-    delegate_to: localhost
-
-  - name: Wait for SSH to come up
-    wait_for:
-      host: "{{ proxmox_ip_prefix }}{{ proxmox_clone_vmid }}"
-      port: 22
-      delay: 1
-      state: started
-    delegate_to: "{{ proxmox_name }}"
-
-  - name: Change IP address in /etc/network/interfaces
-    template: src=roles/proxmox/templates/interfaces_static.j2 dest=/etc/network/interfaces owner=root group=root mode=0644 backup=yes
-    vars:
-      proxmox_address: "{{ proxmox_ip_prefix }}{{ proxmox_vmid }}"
-    delegate_to: "{{ proxmox_ip_prefix }}{{ proxmox_clone_vmid }}"
-    become: true
-
-  - name: Update hostname in /etc/hostname
-    replace:
-      path: /etc/hostname
-      regexp: "ubuntu-14-{{ proxmox_clone_vmid }}"
-      replace: "ubuntu-14-{{ proxmox_vmid }}"
-    delegate_to: "{{ proxmox_ip_prefix }}{{ proxmox_clone_vmid }}"
-    become: true
-
-  - name: Update IP address in /etc/hosts
-    replace:
-      path: /etc/hosts
-      regexp: "{{ proxmox_ip_prefix }}{{ proxmox_clone_vmid }}"
-      replace: "{{ proxmox_ip_prefix }}{{ proxmox_vmid }}"
-    delegate_to: "{{ proxmox_ip_prefix }}{{ proxmox_clone_vmid }}"
-    become: true
-
-  - name: Update hostname in /etc/hosts
-    replace:
-      path: /etc/hosts
-      regexp: "ubuntu-14-{{ proxmox_clone_vmid }}"
-      replace: "ubuntu-14-{{ proxmox_vmid }}"
-    delegate_to: "{{ proxmox_ip_prefix }}{{ proxmox_clone_vmid }}"
-    become: true
-
-  - name: Add VM:{{ proxmox_vmid }} to {{ proxmox_name }}-servers groups
-    add_host:
-      name: "{{ proxmox_ip_prefix }}{{ proxmox_vmid }}"
-      instance_name: "{{ proxmox_name }}-server-{{ proxmox_vmid }}"
-      groups: "{{ proxmox_name }}-servers"
-      ansible_user: "{{ proxmox_user }}"
-      ansible_ssh_common_args: ' -o ProxyCommand="ssh -F ./ssh_config {{ proxmox_name }} -W %h:%p"'
-
-  - name: Reboot VM:{{ proxmox_vmid }}
-    command: /sbin/reboot
-    delegate_to: "{{ proxmox_ip_prefix }}{{ proxmox_clone_vmid }}"
-    become: true
-
-  - name: Wait for SSH to come up
-    wait_for:
-      host: "{{ proxmox_ip_prefix }}{{ proxmox_vmid }}"
-      port: 22
-      delay: 1
-      state: started
-    delegate_to: "{{ proxmox_name }}"
-
-  - name: Check if {{ proxmox_name }}-servers group exists in the inventory file
-    lineinfile:
-      path: ./inventory.ini
-      line: "[{{ proxmox_name }}-servers]"
-      state: present
-
-  - name: Add VM:{{ proxmox_vmid }} to the {{ proxmox_name }}-servers group in the inventory file
-    lineinfile:
-      path: ./inventory.ini
-      line: "{{ proxmox_name }}-server-{{ proxmox_vmid }} ansible_host={{ proxmox_ip_prefix }}{{ proxmox_vmid }} ansible_user={{ proxmox_user }} ansible_ssh_common_args=' -o ProxyCommand=\"ssh -F ./ssh_config {{ proxmox_name }} -W %h:%p\"'"
-      insertafter: "^\\[{{ proxmox_name }}-servers\\]"
-      state: present
-
-  - name: Refresh invetory
-    meta: refresh_inventory
-
-#  - debug:
-#      msg: "{{ groups }}"
-
+- name: Create VM
+  include: create_vm.yml
+  vars:
+    proxmox_vmid: "{{ item }}"
+  with_items: "{{ proxmox_vmids }}"
   when: provision_proxmox
 
 - name: Remove VM
-  block:
-  - name: Remove VM:{{ proxmox_vmid }} from the {{ proxmox_name }}-servers group in the inventory file
-    lineinfile:
-      path: ./inventory.ini
-      line: "{{ proxmox_name }}-server-{{ proxmox_vmid }} ansible_host={{ proxmox_ip_prefix }}{{ proxmox_vmid }} ansible_user={{ proxmox_user }} ansible_ssh_common_args=' -o ProxyCommand=\"ssh -F ./ssh_config {{ proxmox_name }} -W %h:%p\"'"
-      state: absent
-
-  - name: Remove {{ proxmox_name }}-servers group from the inventory file
-    lineinfile:
-      path: ./inventory.ini
-      line: "[{{ proxmox_name }}-servers]"
-      state: absent
-
-  - name: Stop VM:{{ proxmox_vmid }}
-    proxmox_kvm:
-      state: stopped
-      node: "{{ proxmox_node }}"
-      api_user: "{{ proxmox_api_user }}"
-      api_password: "{{ proxmox_api_password }}"
-      api_host: "{{ proxmox_api_host }}"
-      name: "{{ proxmox_hostname_prefix }}-{{ proxmox_vmid }}"
-      vmid: "{{ proxmox_vmid }}"
-    delegate_to: localhost
-
-  - name: Destroy VM:{{ proxmox_vmid }}
-    proxmox_kvm:
-      state: absent
-      node: "{{ proxmox_node }}"
-      api_user: "{{ proxmox_api_user }}"
-      api_password: "{{ proxmox_api_password }}"
-      api_host: "{{ proxmox_api_host }}"
-      name: "{{ proxmox_hostname_prefix }}-{{ proxmox_vmid }}"
-      vmid: "{{ proxmox_vmid }}"
-    delegate_to: localhost
-
+  include: remove_vm.yml
+  vars:
+    proxmox_vmid: "{{ item }}"
+  with_items: "{{ proxmox_vmids }}"
   when: not provision_proxmox
