--- a/proxmox/princeton/roles/docker/tasks/main.yml
+++ b/proxmox/princeton/roles/docker/tasks/main.yml
@@ -1,95 +1,9 @@
 ---
 
 - name: Install docker
-  block:
-  - name: Ensure repository key is installed
-    apt_key:
-      id: "58118E89F3A912897C070ADBF76221572C52609D"
-      keyserver: "hkp://p80.pool.sks-keyservers.net:80"
-      state: present
-
-  - name: Ensure docker registry is available
-    # For Ubuntu 14.04 LTS, use this repository:
-    apt_repository:
-      repo: 'deb https://apt.dockerproject.org/repo ubuntu-trusty main'
-      update_cache: yes
-      state: present
-#    # For Ubuntu 16.04 LTS, use this repo instead:
-#    apt_repository:
-#      repo: 'deb https://apt.dockerproject.org/repo ubuntu-xenial main'
-#      update_cache: yes
-#      state: present
-
-# For Ubuntu Trusty, Vivid, and Wily, it’s recommended to install the linux-image-
-# extra kernel package. The linux-image-extra package allows you use the aufs
-# storage driver.
-# https://docs.docker.com/engine/userguide/storagedriver/aufs-driver/
-# had to run manually
-# - name: allow use of aufs storage driver
-#   shell: apt-get install linux-image-extra-$(uname -r)
-
-  - name: Ensure docker and dependencies are installed
-    apt:
-      name: docker-engine
-
-#  # Uncomment the following to enable insecure registries with Docker
-#  - name: Ensure docker can use insecure registries in 10.11.0.0/16
-#    lineinfile: "dest=/etc/default/docker regexp=^DOCKER_OPTS line=DOCKER_OPTS='--insecure-registry 10.11.0.0/16'"
-
-  - name: Add user {{ ansible_user }} to docker group
-    user:
-      name: "{{ ansible_user }}"
-      groups: docker
-      append: yes
-
-  - name: Restart docker service
-    service:
-      name: docker
-      state: restarted
-
-  - name: Get docker compose
-    get_url:
-      url: https://github.com/docker/compose/releases/download/1.5.2/docker-compose-Linux-x86_64
-      dest: /usr/local/bin/docker-compose
-      mode: 0755
-
-#  - debug:
-#    msg: "{{inventory_hostname}}"
-
+  include: install_docker.yml
   when: provision_docker
 
-- name: Uninstall docker
-  block:
-  - name: Remove repository key if installed
-    apt_key:
-      id: "58118E89F3A912897C070ADBF76221572C52609D"
-      keyserver: "hkp://p80.pool.sks-keyservers.net:80"
-      state: absent
-
-  - name: Remove docker registry if available
-    # For Ubuntu 14.04 LTS, use this repository:
-    apt_repository:
-      repo: 'deb https://apt.dockerproject.org/repo ubuntu-trusty main'
-      update_cache: yes
-      state: absent
-#    # For Ubuntu 16.04 LTS, use this repo instead:
-#    apt_repository:
-#      repo: 'deb https://apt.dockerproject.org/repo ubuntu-xenial main'
-#      update_cache: yes
-#      state: absent
-
-  - name: Uninstall docker and dependencies
-    apt:
-      name: docker-engine
-      purge: yes
-      state: absent
-
-  - name: Remove docker compose
-    file:
-      path: /usr/local/bin/docker-compose
-      state: absent
-
-#  - debug:
-#    msg: "{{inventory_hostname}}"
-
+- name: Remove docker
+  include: remove_docker.yml
   when: not provision_docker
