--- a/proxmox/princeton/inventory.ini
+++ b/proxmox/princeton/inventory.ini
@@ -1,2 +1,5 @@
 [pve1-servers]
+pve1-server-123 ansible_host=10.10.10.123 ansible_user=mshahbaz ansible_ssh_common_args=' -o ProxyCommand="ssh -F ./ssh_config pve1 -W %h:%p"'
+pve1-server-122 ansible_host=10.10.10.122 ansible_user=mshahbaz ansible_ssh_common_args=' -o ProxyCommand="ssh -F ./ssh_config pve1 -W %h:%p"'
+pve1-server-121 ansible_host=10.10.10.121 ansible_user=mshahbaz ansible_ssh_common_args=' -o ProxyCommand="ssh -F ./ssh_config pve1 -W %h:%p"'
 pve1-server-120 ansible_host=10.10.10.120 ansible_user=mshahbaz ansible_ssh_common_args=' -o ProxyCommand="ssh -F ./ssh_config pve1 -W %h:%p"'
