--- a/proxmox/princeton/roles/proxmox/tasks/remove_vm.yml
+++ b/proxmox/princeton/roles/proxmox/tasks/remove_vm.yml
@@ -2,13 +2,13 @@
 
 - name: Remove VM from the {{ proxmox_name }}-servers group in the inventory file
   lineinfile:
-    path: ./inventory.ini
+    path: "{{ inventory_file }}"
     line: "{{ proxmox_name }}-server-{{ proxmox_vmid }} ansible_host={{ proxmox_ip_prefix }}{{ proxmox_vmid }} ansible_user={{ proxmox_user }} ansible_ssh_common_args='{{ ssh_common_args }}'"
     state: absent
 
 - name: Remove {{ proxmox_name }}-servers group from the inventory file
   lineinfile:
-    path: ./inventory.ini
+    path: "{{ inventory_file }}"
     line: "[{{ proxmox_name }}-servers]"
     state: absent
 
