--- a/proxmox/princeton/roles/kubernetes/tasks/main.yml
+++ b/proxmox/princeton/roles/kubernetes/tasks/main.yml
@@ -1,5 +1,10 @@
 ---
 
+- include: install_common.yml
+  tags: common
+  when:
+    "'masters' in group_names or 'minions' in group_names"
+
 - include: ssl_cert_gen.yml
   tags: ssl_gen
   when:
@@ -10,7 +15,7 @@
   when:
     "'masters' in group_names"
 
-- include: minion_build.yaml
+- include: minion_build.yml
   tags: minion
   when:
     "'minions' in group_names"
