--- a/proxmox/princeton/roles/docker/tasks/main.yml
+++ b/proxmox/princeton/roles/docker/tasks/main.yml
@@ -1,11 +1,11 @@
 ---
 
-- name: Install docker
-  include: install_docker.yml
+- name: install docker
+  include: install.yml
 #  when: provision_docker
   tags: install
 
-- name: Remove docker
-  include: remove_docker.yml
+- name: remove docker
+  include: remove.yml
 #  when: not provision_docker
   tags: remove
