--- a/testbeds/princeton/common.yml
+++ b/testbeds/princeton/common.yml
@@ -1,7 +1,7 @@
 ---
 
-- name: Provision common
-  hosts: pve*-servers
+- name: provision common
+  hosts: all
   gather_facts: false
   become: true
 
