--- a/testbeds/princeton/docker.yml
+++ b/testbeds/princeton/docker.yml
@@ -1,7 +1,7 @@
 ---
 
-- name: Provision docker
-  hosts: pve*-servers
+- name: provision docker
+  hosts: all
   gather_facts: false
   become: true
 
