--- a/testbeds/princeton/roles/common/tasks/remove.yml
+++ b/testbeds/princeton/roles/common/tasks/remove.yml
@@ -1,12 +1,5 @@
 ---
 
-#- name: remove systemd
-#  become: true
-#  apt:
-#    name: systemd
-#    purge: yes
-#    state: absent
-
 - name: remove bridge-utils
   become: true
   apt:
@@ -20,5 +13,9 @@
     name: unzip
     purge: yes
     state: absent
+
+- name: update cache
+  become: true
+  apt:
     update_cache: yes
 
