--- a/testbeds/princeton/roles/proxmox/tasks/create_vms.yml
+++ b/testbeds/princeton/roles/proxmox/tasks/create_vms.yml
@@ -1,12 +1,12 @@
 ---
 
-- name: add VM to 'all' group
+- name: add VM to {{ proxmox_node }}-vms group
   add_host:
-    name: "{{ proxmox_ip_prefix }}{{ proxmox_clone_vmid }}"
-    instance_name: "{{ proxmox_name }}-server-{{ proxmox_clone_vmid }}"
-    groups: "{{ proxmox_name }}-servers"
-    ansible_user: "{{ proxmox_user }}"
-    ansible_ssh_common_args: "{{ ssh_common_args }}"
+    name: "{{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_base_vmid }}"
+    instance_name: "{{ proxmox_vm_hostname_prefix }}{{ proxmox_vm_base_vmid }}"
+    groups: "{{ proxmox_node }}-vms"
+    ansible_user: "{{ proxmox_vm_user }}"
+    ansible_ssh_common_args: "{{ proxmox_ssh_common_args }}"
 
 - name: clone VM
   proxmox_kvm:
@@ -15,10 +15,10 @@
     api_user: "{{ proxmox_api_user }}"
     api_password: "{{ proxmox_api_password }}"
     api_host: "{{ proxmox_api_host }}"
-    clone: "{{ proxmox_hostname_prefix }}-{{ proxmox_clone_vmid }}"
-    vmid: "{{ proxmox_clone_vmid }}"
-    name: "{{ proxmox_hostname_prefix }}-{{ proxmox_vmid }}"
-    newid: "{{ proxmox_vmid }}"
+    clone: "{{ proxmox_vm_base_hostname }}"
+    vmid: "{{ proxmox_vm_base_vmid }}"
+    name: "{{ proxmox_vm_hostname_prefix }}{{ proxmox_vm_vmid }}"
+    newid: "{{ proxmox_vm_vmid }}"
   delegate_to: localhost
 
 - name: start VM
@@ -28,17 +28,17 @@
     api_user: "{{ proxmox_api_user }}"
     api_password: "{{ proxmox_api_password }}"
     api_host: "{{ proxmox_api_host }}"
-    name: "{{ proxmox_hostname_prefix }}-{{ proxmox_vmid }}"
-    vmid: "{{ proxmox_vmid }}"
+    name: "{{ proxmox_vm_hostname_prefix }}{{ proxmox_vm_vmid }}"
+    vmid: "{{ proxmox_vm_vmid }}"
   delegate_to: localhost
 
 - name: wait for ssh to come up
   wait_for:
-    host: "{{ proxmox_ip_prefix }}{{ proxmox_clone_vmid }}"
+    host: "{{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_base_vmid }}"
     port: 22
     delay: 1
     state: started
-  delegate_to: "{{ proxmox_name }}"
+  delegate_to: "{{ proxmox_node }}"
 
 - name: change ip address in /etc/network/interfaces
   template:
@@ -48,67 +48,65 @@
     group: root
     mode: 0644
     backup: yes
-  vars:
-    proxmox_address: "{{ proxmox_ip_prefix }}{{ proxmox_vmid }}"
-  delegate_to: "{{ proxmox_ip_prefix }}{{ proxmox_clone_vmid }}"
+  delegate_to: "{{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_base_vmid }}"
   become: true
 
 - name: update hostname in /etc/hostname
   replace:
     path: /etc/hostname
-    regexp: "ubuntu-14-{{ proxmox_clone_vmid }}"
-    replace: "ubuntu-14-{{ proxmox_vmid }}"
-  delegate_to: "{{ proxmox_ip_prefix }}{{ proxmox_clone_vmid }}"
+    regexp: "{{ proxmox_vm_base_hostname }}"
+    replace: "{{ proxmox_vm_hostname_prefix }}{{ proxmox_vm_vmid }}"
+  delegate_to: "{{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_base_vmid }}"
   become: true
 
 - name: update ip address in /etc/hosts
   replace:
     path: /etc/hosts
-    regexp: "{{ proxmox_ip_prefix }}{{ proxmox_clone_vmid }}"
-    replace: "{{ proxmox_ip_prefix }}{{ proxmox_vmid }}"
-  delegate_to: "{{ proxmox_ip_prefix }}{{ proxmox_clone_vmid }}"
+    regexp: "{{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_base_vmid }}"
+    replace: "{{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_vmid }}"
+  delegate_to: "{{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_base_vmid }}"
   become: true
 
 - name: update hostname in /etc/hosts
   replace:
     path: /etc/hosts
-    regexp: "ubuntu-14-{{ proxmox_clone_vmid }}"
-    replace: "ubuntu-14-{{ proxmox_vmid }}"
-  delegate_to: "{{ proxmox_ip_prefix }}{{ proxmox_clone_vmid }}"
+    regexp: "{{ proxmox_vm_base_hostname }}"
+    replace: "{{ proxmox_vm_hostname_prefix }}{{ proxmox_vm_vmid }}"
+  delegate_to: "{{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_base_vmid }}"
   become: true
 
-- name: add VM to {{ proxmox_name }}-servers groups
+- name: add VM to {{ proxmox_node }}-vms groups
   add_host:
-    name: "{{ proxmox_ip_prefix }}{{ proxmox_vmid }}"
-    instance_name: "{{ proxmox_name }}-server-{{ proxmox_vmid }}"
-    groups: "{{ proxmox_name }}-servers"
-    ansible_user: "{{ proxmox_user }}"
-    ansible_ssh_common_args: "{{ ssh_common_args }}"
+    name: "{{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_vmid }}"
+    instance_name: "{{ proxmox_vm_hostname_prefix }}{{ proxmox_vm_vmid }}"
+    groups: "{{ proxmox_node }}-vms"
+    ansible_user: "{{ proxmox_vm_user }}"
+    ansible_ssh_common_args: "{{ proxmox_ssh_common_args }}"
 
 - name: reboot VM
   command: /sbin/reboot
-  delegate_to: "{{ proxmox_ip_prefix }}{{ proxmox_clone_vmid }}"
+  delegate_to: "{{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_base_vmid }}"
   become: true
 
 - name: wait for ssh to come up
   wait_for:
-    host: "{{ proxmox_ip_prefix }}{{ proxmox_vmid }}"
+    host: "{{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_vmid }}"
     port: 22
     delay: 1
     state: started
-  delegate_to: "{{ proxmox_name }}"
+  delegate_to: "{{ proxmox_node }}"
 
-- name: ensure that {{ proxmox_name }}-servers group exists in the inventory file
+- name: ensure that {{ proxmox_node }}-vms group exists in the inventory file
   lineinfile:
     path: "{{ inventory_file }}"
-    line: "[{{ proxmox_name }}-servers]"
+    line: "[{{ proxmox_node }}-vms]"
     state: present
 
-- name: add VM to the {{ proxmox_name }}-servers group in the inventory file
+- name: add VM to the {{ proxmox_node }}-vms group in the inventory file
   lineinfile:
     path: "{{ inventory_file }}"
-    line: "{{ proxmox_name }}-server-{{ proxmox_vmid }} ansible_host={{ proxmox_ip_prefix }}{{ proxmox_vmid }} ansible_user={{ proxmox_user }} ansible_ssh_common_args='{{ ssh_common_args }}'"
-    insertafter: "^\\[{{ proxmox_name }}-servers\\]"
+    line: "{{ proxmox_vm_hostname_prefix }}{{ proxmox_vm_vmid }} ansible_host={{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_vmid }} ansible_user={{ proxmox_vm_user }} ansible_ssh_common_args='{{ proxmox_ssh_common_args }}'"
+    insertafter: "^\\[{{ proxmox_node }}-vms\\]"
     state: present
 
 - name: refresh invetory
